# python-examples

./: README.md  preemptive_semaphore.py
average-is-bad/: mean_supply.py  mm1_equal_demand_and_capacity.py  mm1_shortage_demand_and_capacity.py  mm1_stable_demand_and_capacity.py
compare_queue_tools/: MM1.cpp  ciw_MM1.py  cpp_MM1  old_results.csv  old_results.md  plot_results.py  qt_MM1.py  results.csv  results.md  run_experiment.py  runtest_results.csv  simpy_MM1.py  system_info.py
example_service/: README.md  pyproject.toml
example_service/src/example_service/: __init__.py  example_retrieve.sh  example_send.sh  main.py  models.py  schemas.py  start_service.sh
experiment-hausdorff-converge/: example.py
inpatient-error/: example.py
matrix_linear_models/: derp.py  example_gmmlm_beta.py  example_gmmlm_binomial.py  example_gmmlm_exponential.py  example_gmmlm_gamma.py  example_gmmlm_negative_binomial.py  example_gmmlm_normal.py  example_gmmlm_poisson.py  example_gnsem_0.py  example_gomlme_0.py  example_gomlme_1.py  example_herp.py  example_mmlm.py  example_mmlm_2.py  example_mmlm_3.py  example_mmlm_4.py  example_mmlm_5.py  example_mmlm_6.py  example_mmlm_7.py  example_mmlm_8.py  example_omlme_0.py  families.py  gmmlm.py  gnsem.py  gomlme.py  herp.py  matrix_linear_model.py  mmlm.py  model_requirements.txt  omlme.py
pip-history/: README.md  pyproject.toml
pip-history/src/pip_history/: __init__.py  example.py
prediction_over_intervals/: example_feature_extraction.py  example_fitting_model.py  example_fitting_multivariate_model.py  example_fitting_multivariate_model_2.py  example_matrix_prediction.py  features.py  requirements.txt
pycallgraph-cli/: example_code.py  profiler.py
sankey-example/: example.py
try-ibis/: pyproject.toml
try-ibis/src/try_ibis/: example1.py
(+80 files in other folders)
