[project]
name = "pip-history"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "galenseilis", email = "galen.seilis@seilis.ca" }
]
dependencies = [
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "matplotlib>=3.9.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pip_history"]
