[project]
name = "try-ibis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "galenseilis", email = "galen.seilis@seilis.ca" }
]
dependencies = [
    "pyarrow>=17.0.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/try_ibis"]
